# iu9-scene-analysis

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
data/datasets/road_obstacle_21/predictions/: validation_1.npy  validation_10.npy  validation_11.npy  validation_12.npy  validation_13.npy  validation_14.npy  validation_15.npy  validation_16.npy  validation_17.npy  validation_18.npy  validation_2.npy  validation_20.npy  (+18 more)
src/scene_analysis/: config.py  logging_setup.py  types.py  utils.py
src/scene_analysis/app/: cli.py
src/scene_analysis/depth/: __init__.py  base.py  depth_anything_estimator.py  visualization.py
src/scene_analysis/dynamic/: __init__.py  base.py
src/scene_analysis/evaluation/: __init__.py  dataset.py  io.py  metrics.py  preparation.py  runner.py  types.py  visualization.py
src/scene_analysis/io/: __init__.py  artifact_writer.py  heatmap_prediction_writer.py  image_reader.py  video_reader.py
src/scene_analysis/obstacle_map/: __init__.py  base.py  heatmap_builder.py  visualization.py
src/scene_analysis/pipeline/: __init__.py  base.py  image_prediction_runner.py  mvp_pipeline.py
src/scene_analysis/preprocessing/: __init__.py  frame_preprocessor.py
tests/: test_cli.py  test_config.py  test_depth_factory.py  test_depth_visualization.py  test_evaluation_dataset.py  test_evaluation_metrics.py  test_evaluation_preparation.py  test_evaluation_runner.py  test_evaluation_visualization.py  test_image_prediction_runner.py  test_obstacle_heatmap_builder.py  test_obstacle_visualization.py  test_pipeline.py  test_preprocessing.py
